tests/l0/appgateway/l0test/coverage/L0_COVERAGE_RUN_RESULT.txt
[run_l0_coverage] ROOT=/home/kavia/workspace/code-generation
[run_l0_coverage] L0_DIR=/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test
[run_l0_coverage] BUILD_DIR=/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/build
[run_l0_coverage] INSTALL_PREFIX=/home/kavia/workspace/code-generation/dependencies/install
[run_l0_coverage] COVERAGE_DIR=/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/coverage

[run_l0_coverage] ===== Tool checks =====

[run_l0_coverage] ===== Input checks =====
[run_l0_coverage] Using AppGateway plugin .so: /home/kavia/workspace/code-generation/build/app-gateway/AppGateway/libWPEFrameworkAppGateway.so

[run_l0_coverage] ===== Coverage flags =====
[run_l0_coverage] CXXFLAGS=--coverage -O0 -g
[run_l0_coverage] LDFLAGS=--coverage

[run_l0_coverage] ===== Clean build directory =====
[run_l0_coverage] rm -rf '/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/build'

[run_l0_coverage] ===== Prepare Real-plugin link path (optional) =====
[run_l0_coverage] Symlinked for CMake probe:
[run_l0_coverage]   /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGateway/libWPEFrameworkAppGateway.so -> /home/kavia/workspace/code-generation/build/app-gateway/AppGateway/libWPEFrameworkAppGateway.so

[run_l0_coverage] ===== Configure (Ninja) and build =====
[run_l0_coverage] Configuring with Ninja generator against: /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test
-- The CXX compiler identification is unknown
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Using PREFIX='/home/kavia/workspace/code-generation/dependencies/install'
-- AppGateway l0test: Using installed WPEFramework interface: /home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework/interfaces/IAppGateway.h
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- WPEFrameworkCore/ThunderCore not found via find_library; ensure PREFIX is correct.
-- WPEFrameworkMessaging/ThunderMessaging not found via find_library; ensure PREFIX is correct.
-- WPEFrameworkPlugins/ThunderPlugins not found via find_library; ensure PREFIX is correct.
-- Linking against built AppGateway plugin: /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/build/../AppGateway/libWPEFrameworkAppGateway.so
-- Configuring done (0.4s)
-- Generating done (0.0s)
-- Build files have been written to: /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/build
[run_l0_coverage] Building target 'appgateway_l0test' (jobs=16)...
[1/7] Building CXX object CMakeFiles/appgateway_l0test.dir/Responder_BehaviorTests.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/Responder_BehaviorTests.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/Responder_BehaviorTests.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/Responder_BehaviorTests.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/Responder_BehaviorTests.cpp:6:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGateway.h:23:10: fatal error: ../helpers/ErrorUtils.h: No such file or directory
   23 | #include "../helpers/ErrorUtils.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[2/7] Building CXX object CMakeFiles/appgateway_l0test.dir/AppGateway_JsonRpcResolveTests.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/AppGateway_JsonRpcResolveTests.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/AppGateway_JsonRpcResolveTests.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGateway_JsonRpcResolveTests.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGateway_JsonRpcResolveTests.cpp:8:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGateway.h:23:10: fatal error: ../helpers/ErrorUtils.h: No such file or directory
   23 | #include "../helpers/ErrorUtils.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[3/7] Building CXX object CMakeFiles/appgateway_l0test.dir/ContextUtils_ConversionTests.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/ContextUtils_ConversionTests.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/ContextUtils_ConversionTests.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/ContextUtils_ConversionTests.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/ContextUtils_ConversionTests.cpp:8:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGateway.h:23:10: fatal error: ../helpers/ErrorUtils.h: No such file or directory
   23 | #include "../helpers/ErrorUtils.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[4/7] Building CXX object CMakeFiles/appgateway_l0test.dir/Resolver_Configure_And_ResolveTests.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/Resolver_Configure_And_ResolveTests.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/Resolver_Configure_And_ResolveTests.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/Resolver_Configure_And_ResolveTests.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGatewayImplementation.h:23,
                 from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/Resolver_Configure_And_ResolveTests.cpp:13:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../Resolver.h:23:10: fatal error: UtilsLogging.h: No such file or directory
   23 | #include "UtilsLogging.h"
      |          ^~~~~~~~~~~~~~~~
compilation terminated.
[5/7] Building CXX object CMakeFiles/appgateway_l0test.dir/AppGateway_Init_DeinitTests.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/AppGateway_Init_DeinitTests.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/AppGateway_Init_DeinitTests.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGateway_Init_DeinitTests.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGateway_Init_DeinitTests.cpp:8:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGateway.h:23:10: fatal error: ../helpers/ErrorUtils.h: No such file or directory
   23 | #include "../helpers/ErrorUtils.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[6/7] Building CXX object CMakeFiles/appgateway_l0test.dir/AppGatewayTest.cpp.o
FAILED: CMakeFiles/appgateway_l0test.dir/AppGatewayTest.cpp.o 
/usr/bin/c++ -DMODULE_NAME=AppGateway_L0Test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../.. -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../helpers -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../Supporting_Files -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces -I/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../../interfaces/json -I/home/kavia/workspace/code-generation/dependencies/install/include -I/home/kavia/workspace/code-generation/dependencies/install/include/WPEFramework --coverage -O0 -g -O0 -g --coverage -Wall -Wextra -Wno-unused-parameter -o CMakeFiles/appgateway_l0test.dir/AppGatewayTest.cpp.o -c /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGatewayTest.cpp
In file included from /home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/AppGatewayTest.cpp:7:
/home/kavia/workspace/code-generation/app-gateway2/AppGateway/l0test/../AppGateway.h:23:10: fatal error: ../helpers/ErrorUtils.h: No such file or directory
   23 | #include "../helpers/ErrorUtils.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
ninja: build stopped: subcommand failed.
